[package]
name = "timestamp-benchmark"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "nows"
harness = false

# fixes an issue with passing the --verbose flag to criterion
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[[bin]]
name = "main"
path = "src/main.rs"
bench = false